Fixed scrolling padding for section, and also makes the first section visible by default on loading.

--- a/src/app/home/home.scss
+++ b/src/app/home/home.scss
@@ -2,6 +2,7 @@
 
 #about {
     text-align: center;
+    scroll-margin-top: 100px;
 }
 
 #home {
@@ -30,6 +31,7 @@
         max-width: 1200px;
         margin: 0 auto;
         margin-top: 50px;
+        scroll-margin-top: 100px;
         // padding: 2rem 1rem;
 
         h2 {
@@ -45,6 +47,12 @@
         &.show {
             opacity: 1;
             transform: translateY(0);
+        }
+
+        &.hidden {
+            opacity: 0;
+            transform: translateY(20px);
+            transition: opacity 0.6s ease-out, transform 0.6s ease-out;
         }
 
         // Cascade : applique des délais progressifs selon l’ordre
